--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <title> Canvas Datatable </title>
     <meta charset="UTF-8" />
+
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Titillium+Web" />
   </head>
 
   <body>
-    <!-- <canvas width="400" height="300"></canvas> -->
     <div style="border: 1px solid #999; display: inline-block;">
       <canvas id="canvas-datatable"></canvas>
     </div>
 
-    <!-- <script src="src/index.js"></script> -->
     <script src="src/canvas-datatable-example.js"></script>
   </body>
 </html>
