--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div style="border: 1px solid #999; display: inline-block;">
+    <div style="border: 1px solid #A0A0A0; display: inline-block;">
       <canvas id="canvas-datatable"></canvas>
     </div>
 
